test/error/iface/err8.rzy
interface
  Iface
    function funcA();
    function funcB();
  end

component
  Sub
    output
      out: Iface;
      
    implementation elementary
  end

  Err8
    implementation elementary
    
    component
      a : Sub;

    function a.out.funcA()
    end

    function a.out.funcB()
    end

    function b.out.funcA()
    end

  end

